# narps_open_pipelines

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  27SS_description.md  6VV2.md  CODE_OF_CONDUCT.md  CONTENT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  environment.yml  makefile  notes.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  show_desc_script.py
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  pipeline_reproduction.md  pipeline_reproduction.yml  staff-feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: code_quality.yml  codespell.yml  pipeline_status.yml  pipeline_tests.yml  pylint.yml  test_changes.yml  unit_tests.yml
Afni_proc_through_nipype/: graph.json  graph1.json
Afni_proc_through_nipype/files/: _inputs.pklz  _node.pklz  (+2 more)
circleci/: build_docker.sh  push_docker.sh
docs/: README.md  ci-cd.md  configuration.md  core.md  data.md  description.md  descriptions.md  environment.md  index.md  narps.md  pipeline_status.md  pipelines.md  running.md  status.md  testing.md
narps_open/: runner.py  tester.py
src/: reproduction_2T6S.ipynb  reproduction_4TQ6.ipynb  reproduction_98BT.ipynb  reproduction_C88N.ipynb  reproduction_J7F9.ipynb  reproduction_Q6O0.ipynb  reproduction_T54A.ipynb  reproduction_V55J.ipynb  reproduction_X19V.ipynb  test_utils.py
tests/: conftest.py  test_conftest.py  test_runner.py
(+1155 files in other folders)
